[gd_scene load_steps=7 format=3 uid="uid://bcsnkyl6md51i"]

[ext_resource type="Script" path="res://components/scripts/enchantment_projectile.gd" id="1_tncp7"]
[ext_resource type="Texture2D" uid="uid://bl0aj070oadal" path="res://components/sprites/enemies/fae/fae_enchantment_projectile.png" id="2_m7cc0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4s87d"]
atlas = ExtResource("2_m7cc0")
region = Rect2(0, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ubdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s87d")
}],
"loop": true,
"name": &"effect",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l4qwa"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nfri"]
height = 20.0

[node name="Enchantment_dart_projectile" type="CharacterBody2D"]
process_mode = 1
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_tncp7")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_1ubdb")
animation = &"effect"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(33, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_l4qwa")
disabled = true

[node name="Time_to_live" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Area_to_impact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_to_impact"]
z_index = 1
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7nfri")
debug_color = Color(0.862745, 0.133333, 0.133333, 0.0666667)

[connection signal="timeout" from="Time_to_live" to="." method="_on_time_to_live_timeout"]
[connection signal="body_entered" from="Area_to_impact" to="." method="_on_area_to_impact_body_entered"]
